# intake-awkward

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: pypi-tests.yml
src/intake_awkward/: __init__.py  _version.py  json.py  version.pyi
