[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "intake-awkward"
description = "Intake for Awkward"
readme = "README.md"
license = "BSD-3-Clause"
requires-python = ">=3.8"
authors = [
    { name = "Doug Davis", email = "ddavis@ddavis.io" },
]
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "dask-awkward",
    "intake>=0.6.5",
]
dynamic = ["version"]

[project.optional-dependencies]
complete = ["pytest>=6.0"]
test = ["pytest>=6.0"]

[project.urls]
Homepage = "https://github.com/douglasdavis/intake-awkward"

[project.entry-points."intake.drivers"]
awkward_json = "intake_awkward.json:JSONSource"

[tool.hatch.version]
source = "vcs"
path = "src/intake_awkward/__init__.py"

[tool.hatch.build.hooks.vcs]
version-file = "src/intake_awkward/version.py"

[tool.hatch.build.targets.sdist]
include = ["/src"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = ["-v", "-ra", "--showlocals", "--strict-markers", "--strict-config"]
testpaths = ["tests"]

[tool.isort]
profile = "black"
line_length = 88
src_paths = ["src", "tests"]

[tool.mypy]
python_version = "3.8"
files = ["src"]
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["awkward.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["intake.*"]
ignore_missing_imports = true

[tool.pyright]
include = ["src"]
pythonVersion = "3.8"
